--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@fontsource/merriweather": "^5.0.13",
     "@fontsource/roboto": "^5.0.13",
     "astro": "^4.11.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   }
