--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/merriweather": "^5.0.13",
     "@fontsource/roboto": "^5.0.13",
     "astro": "^4.11.3",
+    "astro-icon": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.3.0",
