--- a/src/config/config.json
+++ b/src/config/config.json
@@ -13,8 +13,7 @@
 
   "settings": {
     "pagination": 6,
-    "summary_length": 100,
-    "blog_folder": "blog"
+    "summary_length": 100
   },
 
   "hero": {
@@ -24,5 +23,13 @@
       "label": "Get Access Now",
       "link": "/"
     }
-  }
+  },
+
+  "socials": [
+    {
+      "name": "Linkedin",
+      "icon": "linkedin",
+      "url": "/"
+    }
+  ]
 }
