new font optimizer and design table of contents

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -27,6 +27,11 @@
 
   "socials": [
     {
+      "name": "GitHub",
+      "icon": "github",
+      "url": "/"
+    },
+    {
       "name": "Linkedin",
       "icon": "linkedin",
       "url": "/"
