--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@fontsource/merriweather": "^5.0.13",
-    "@fontsource/roboto": "^5.0.13",
     "astro": "^4.11.3",
+    "astro-google-fonts-optimizer": "^0.2.2",
     "astro-icon": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
