--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.5.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13"
+    "@tailwindcss/typography": "^0.5.13",
+    "tailwind-scrollbar": "^3.1.0"
   }
 }
