fix: skip to main link not cover logo on mobile device, edit muted foreground color to have better contrast

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -27,7 +27,7 @@
 
   "portfolio": {
     "title": "Portfolio",
-    "description": "Here is a curated collection of projects I've created and related experiences."
+    "description": "Here is a curated collection of projects I've created and related experiences you can read about."
   },
 
   "collection": {
