update config file and make footer link open in new tab

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -30,12 +30,12 @@
     {
       "name": "GitHub",
       "icon": "github",
-      "url": "/"
+      "url": "https://github.com/Narek-Pogosian"
     },
     {
       "name": "Linkedin",
       "icon": "linkedin",
-      "url": "/"
+      "url": "https://www.linkedin.com/in/narek-pogosian-945a48261/"
     }
   ]
 }
